--- a/public/publico.html
+++ b/public/publico.html
@@ -19,6 +19,8 @@
     <table>
         <tr>
             <td valign="middle" class="ticket-actual">
+                <span class="ticket-actual-escritorio">Siga:</span>
+                <br>
                 <span id="lblTicket1" class="ticket-actual-numero">Espere...</span>
                 <br>
                 <span id="lblEscritorio1" class="ticket-actual-escritorio"></span>
@@ -26,6 +28,12 @@
             <td>
                 <table>
                     <tr>
+                        <td>
+                            <span>Atendiendo:</span>
+                        </td>
+                    </tr>
+                    <tr>
+
                         <td>
                             <span id="lblTicket2" class="ticket-secundario"></span>
                             <br>
